--- a/assets/sass/cids-theme/_fonts.sass
+++ b/assets/sass/cids-theme/_fonts.sass
@@ -1,12 +1,9 @@
 @include font-face("Aspekta", Aspekta-500, $weight: 500, $exts: (woff2))
 @include font-face("Aspekta", Aspekta-700, $weight: 700, $exts: (woff2))
 
-@include font-face("RecklessNeue", RecklessNeue-Regular, $exts: (woff2))
-@include font-face("RecklessNeue", RecklessNeue-RegularItalic, $style: italic, $exts: (woff2))
-@include font-face("RecklessNeue", RecklessNeue-Thin, $weight: 300, $exts: (woff woff2))
-@include font-face("RecklessNeue", RecklessNeue-ThinItalic, $style: italic, $weight: 300, $exts: (woff woff2))
-@include font-face("RecklessNeue", RecklessNeue-Bold, $weight: 700, $exts: (woff2))
-@include font-face("RecklessNeue", RecklessNeue-BoldItalic, $style: italic, $weight: 700, $exts: (woff2))
+@include font-face("RecklessNeue", RecklessNeue-Regular, $exts: (woff woff2))
+@include font-face("RecklessNeue", RecklessNeue-RegularItalic, $style: italic, $exts: (woff woff2))
+@include font-face("RecklessNeue", RecklessNeue-SemiBold, $weight: 600, $exts: (woff woff2))
 
 // Icons
 @font-face
