navigation between sites

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -9,18 +9,28 @@ $color-selection-background: rgba($color-text, .7)
 
 // Grid System 
 $grid-gutter: pxToRem(24)
-$grid-gutter-lg: pxToRem(24)
-$grid-gutter-xxl: pxToRem(24)
-$grid-margin: pxToRem(40)
+$grid-gutter-lg: pxToRem(40)
+$grid-gutter-xxl: pxToRem(40)
+$grid-margin: pxToRem(42)
 
 $font-serif: "RecklessNeue"
 $font-sans-serif: "Aspekta"
 $body-font-family: $font-sans-serif
 $heading-font-family: $font-sans-serif
 
+// h1
 $h1-font-family: $font-serif
+$h1-size-desktop: pxToRem(84)
+$h1-line-height: 100%
 $h1-weight: normal
 
+// Lead
+$lead-hero-font-family: $font-serif
+$lead-hero-size-desktop: pxToRem(62)
+$lead-hero-size: pxToRem(24)
+$lead-hero-line-height-desktop: pxToRem(74.4)
+
+// Header
 $header-background: $color-background
 $header-logo-height: 50px
 $header-logo-height-desktop: 90px
