--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -1,8 +1,9 @@
-.container,
-.d-grid.is-visible
-    padding-left: $grid-margin
-    padding-right: $grid-margin
-    --column-width: calc( (var(--grid-width) - (var(--grid-gutter) * 11 + calc(#{$grid-margin} * 2))) / 12)
+@include media-breakpoint-up(desktop)
+    .container,
+    .d-grid.is-visible
+        padding-left: $grid-margin
+        padding-right: $grid-margin
+        --column-width: calc( (var(--grid-width) - (var(--grid-gutter) * 11 + calc(#{$grid-margin} * 2))) / 12)
 
 a, .link
     &[target="_blank"]:not(.icon)
