--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -41,5 +41,8 @@ $header-dropdown-color: white
 $header-sticky-dropdown-background: $header-dropdown-background
 $header-sticky-dropdown-color: $header-dropdown-color
 
+// Footer
+$footer-logo-height-desktop: pxToRem(90)
+
 $icons-site: ()
 $icons-site: map-merge($icons-site, ("external": "\e900"))
