--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -26,7 +26,7 @@ header#document-header
                     padding: space() $spacing-2
                     border-radius: pxToRem(20)
                     @include media-breakpoint-up(desktop)
-                        padding: space(2) space(4)
+                        padding: space() space(4)
                         border-radius: pxToRem(30)
                 li:first-child
                     background: var(--color-accent)
