changed toggle color

--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -17,7 +17,7 @@ header#document-header
             padding-bottom: 0
             ul
                 @include list-reset
-                background: #F0F0F0 // TODO : vérifier occurence en fin d'inté
+                background: transparentize(#182B3A, 0.9) // --color accent
                 border-radius: pxToRem(30)
                 display: flex
                 justify-content: flex-end
