--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -38,18 +38,21 @@ header#document-header
                             background: transparentize(#182B3A, 0.9) // --color accent
                             &::after
                                 display: none
-                    + li 
-                        // Alternate dark capsule between links
+                    &:first-of-type
+                        > a[target="_blank"]
+                            border-bottom-right-radius: 0
+                            border-top-right-radius: 0
+                            margin-right: -$spacing-2
+                            padding-right: space(5)
+                        > a:not([target="_blank"])
+                            margin-left: -$spacing-2
+                            padding-left: space(5)
+                    &:nth-child(2)
                         > a[target="_blank"]
                             border-bottom-left-radius: 0
                             border-top-left-radius: 0
                             margin-left: -$spacing-2
                             padding-left: space(5)
-                        > a:not([target="_blank"])
-                            border-bottom-right-radius: 0
-                            border-top-right-radius: 0
-                            margin-right: -$spacing-2
-                            padding-right: space(5)
                     &.header-i18n
                         margin-left: $spacing-2
                         position: relative
