wip: large menu

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -24,25 +24,42 @@ $h1-size-desktop: pxToRem(84)
 $h1-line-height: 100%
 $h1-weight: normal
 
+// h3
+$h3-font-family: $font-serif
+$h3-size-desktop: pxToRem(32)
+$h3-line-height-desktop: pxToRem(44.8)
+
 // Lead
 $lead-hero-font-family: $font-serif
 $lead-hero-size-desktop: pxToRem(62)
 $lead-hero-size: pxToRem(24)
 $lead-hero-line-height-desktop: pxToRem(74.4)
 
+// signature
+$signature-size-desktop: pxToRem(20)
+$signature-line-height-desktop: 100%
+
 // Header
+$header-dropdown-full: true
 $header-background: $color-background
+$header-color: $color-accent
 $header-logo-height: 50px
 $header-logo-height-desktop: 90px
 $header-border-bottom-width: 0
 
-$header-dropdown-background: $color-accent
-$header-dropdown-color: white
-$header-sticky-dropdown-background: $header-dropdown-background
-$header-sticky-dropdown-color: $header-dropdown-color
-
 // Footer
 $footer-logo-height-desktop: pxToRem(90)
 
+// Spacing
+$space-unit: 4
+$spacing-1: space(2)  // 8px
+$spacing-2: space(4)  // 16px
+$spacing-3: space(6)  // 24px
+$spacing-4: space(8)  // 32px
+// $spacing-5: space(40) // 40px
+// $spacing-6: space(20) // 80px
+// $spacing-7: space(40) // 160px
+
+// New icon
 $icons-site: ()
 $icons-site: map-merge($icons-site, ("external": "\e900"))
