--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -3,14 +3,8 @@ header#document-header
         @include media-breakpoint-up(desktop)
             .container
                 align-items: baseline
-                .dropdown-menu
-                    border-radius: space(2)
-                    box-shadow: 0px 4px 4px 0px #00000040
-                    margin-top: 0
-                    min-width: pxToRem(256)
-                    a
-                        @include meta
             + nav 
+                border-bottom: 1px solid var(--color-accent)
                 padding-top: 0
         &.websites-navigation
             @include meta
@@ -67,10 +61,41 @@ header#document-header
                             &[aria-expanded="true"]::after
                                 transform: rotate(180deg)
                         .dropdown-menu
+                            background: $color-accent
+                            border-radius: space(2)
+                            box-shadow: 0px 4px 4px 0px #00000040
                             margin-top: $spacing-2
-                            min-width: unset
                             padding: $spacing-1 $spacing-2
                             position: absolute
                             right: 0
                             a
-                                color: $header-dropdown-color
+                                color: $color-background
+        @include media-breakpoint-up(desktop)
+            .menu
+                width: columns(5)
+                .nav-level-1
+                    justify-content: space-between
+                    li
+                        span,
+                        a
+                            @include signature
+                            &:first-of-type
+                                padding-left: 0
+            .dropdown-menu.is-titled
+                .dropdown-menu
+                    &-title
+                        @include h3
+                        @include link
+                        text-decoration-color: var(--color-accent)
+                        text-underline-offset: pxToRem(10)
+                        margin-bottom: $spacing-3
+                    &-lead
+                        @include lead-hero
+                        font-size: $lead-hero-size
+                        line-height: $lead-hero-line-height
+                .dropdown-heading
+                    width: columns(6)
+                .nav-level-2
+                    padding-top: $spacing-4
+                    margin-left: offset(1)
+                    width: columns(5)
