--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -47,6 +47,9 @@ $header-logo-height: 50px
 $header-logo-height-desktop: 90px
 $header-border-bottom-width: 0
 
+// Navs
+$body-overlay-color: rgba(0, 0, 0, 0.2)
+
 // Footer
 $footer-logo-height-desktop: pxToRem(90)
 
