fix menu for mids

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -1,11 +1,11 @@
-$color-accent: #182B3A
-$color-text: #182B3A
-$color-text-alt: #454545
-$color-background: #FFFFFF
-$color-background-alt: #F3F4EB
-$color-border: rgba(0, 0, 0, 0.30)
-$color-selection: $color-background
-$color-selection-background: rgba($color-text, .7)
+$color-accent: #182B3A !default
+$color-text: #182B3A !default
+$color-text-alt: #454545 !default
+$color-background: #FFFFFF !default
+$color-background-alt: #F3F4EB !default
+$color-border: rgba(0, 0, 0, 0.30) !default
+$color-selection: $color-background !default
+$color-selection-background: rgba($color-text, .7) !default
 
 // Grid System 
 $grid-gutter: pxToRem(24)
@@ -41,8 +41,8 @@ $signature-line-height-desktop: 100%
 
 // Header
 $header-dropdown-full: true
-$header-background: $color-background
-$header-color: $color-accent
+$header-background: $color-background !default
+$header-color: $color-accent !default
 $header-logo-height: 50px
 $header-logo-height-desktop: 90px
 $header-border-bottom-width: 0
