--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -4,7 +4,7 @@ header#document-header
             .container
                 align-items: baseline
             + nav 
-                border-bottom: 1px solid var(--color-accent)
+                border-bottom: 1px solid $header-color
                 padding-top: 0
         &.websites-navigation
             @include meta
@@ -26,10 +26,11 @@ header#document-header
                             border-radius: pxToRem(30)
                     > a
                         &:not(.external-site)
-                            background: var(--color-accent)
-                            color: white
+                            background: $header-color
+                            color: $header-background
                         &.external-site
-                            background: transparentize(#182B3A, 0.9) // --color accent
+                            background: rgba($header-color, 0.2) // --color accent
+                            color: $header-color
                             &::after
                                 display: none
                     &:first-of-type
@@ -37,7 +38,7 @@ header#document-header
                             border-bottom-right-radius: 0
                             border-top-right-radius: 0
                             margin-right: -$spacing-2
-                            padding-right: space(5)
+                            padding-right: space(7)
                         > a:not(.external-site)
                             margin-left: -$spacing-2
                     &:nth-child(2)
@@ -55,13 +56,13 @@ header#document-header
                                 margin-left: space()
                                 margin-right: -(space())
                                 transition: transform 0.15s
-                            border: 1px solid var(--color-accent)
+                            border: 1px solid $header-color
                             cursor: pointer
                             text-transform: uppercase
                             &[aria-expanded="true"]::after
                                 transform: rotate(180deg)
                         .dropdown-menu
-                            background: $color-accent
+                            background: $header-color
                             border-radius: space(2)
                             box-shadow: 0px 4px 4px 0px #00000040
                             margin-top: $spacing-2
@@ -69,10 +70,10 @@ header#document-header
                             position: absolute
                             right: 0
                             a
-                                color: $color-background
+                                color: $header-background
         @include media-breakpoint-up(desktop)
             .menu
-                width: columns(5)
+                min-width: columns(5)
                 .nav-level-1
                     justify-content: space-between
                     li
@@ -85,8 +86,8 @@ header#document-header
                 .dropdown-menu
                     &-title
                         @include h3
-                        @include link
-                        text-decoration-color: var(--color-accent)
+                        @include link($header-color)
+                        text-decoration-color: $header-color
                         text-underline-offset: pxToRem(10)
                         margin-bottom: $spacing-3
                     &-lead
