--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -73,7 +73,7 @@ header#document-header
                                 color: $header-background
         @include media-breakpoint-up(desktop)
             .menu
-                min-width: columns(5)
+                min-width: columns(6)
                 .nav-level-1
                     justify-content: space-between
                     li
@@ -95,8 +95,8 @@ header#document-header
                         font-size: $lead-hero-size
                         line-height: $lead-hero-line-height
                 .dropdown-heading
-                    width: columns(6)
+                    margin-right: offset(1)
+                    width: columns(5)
                 .nav-level-2
                     padding-top: $spacing-4
-                    margin-left: offset(1)
-                    width: columns(5)
+                    width: columns(6)
