spacings for menu

--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -84,6 +84,7 @@ header#document-header
                                 padding-left: 0
             .dropdown-menu.is-titled
                 padding-bottom: $spacing-5
+                padding-top: $spacing-4
                 .dropdown-menu-title
                         @include h3
                         @include link($header-color)
