--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -14,7 +14,7 @@ $grid-gutter-xxl: pxToRem(40)
 $grid-margin: pxToRem(42)
 
 $font-serif: "RecklessNeue"
-$font-sans-serif: "Aspekta"
+$font-sans-serif: "Rand"
 $body-font-family: $font-sans-serif
 $heading-font-family: $font-sans-serif
 
