--- a/assets/sass/cids-theme/_fonts.sass
+++ b/assets/sass/cids-theme/_fonts.sass
@@ -1,5 +1,6 @@
-@include font-face("Aspekta", Aspekta-500, $weight: 500, $exts: (woff2))
-@include font-face("Aspekta", Aspekta-700, $weight: 700, $exts: (woff2))
+@include font-face("Rand", Rand-Medium, $weight: 600, $exts: (woff woff2))
+@include font-face("Rand", Rand-Medium-Italic, $style: italic, $weight: 600, $exts: (woff woff2))
+@include font-face("Rand", Rand-Bold, $weight: 700, $exts: (woff woff2))
 
 @include font-face("RecklessNeue", RecklessNeue-Regular, $exts: (woff woff2))
 @include font-face("RecklessNeue", RecklessNeue-RegularItalic, $style: italic, $exts: (woff woff2))
