rich summary in menu

--- a/layouts/partials/commons/menu.html
+++ b/layouts/partials/commons/menu.html
@@ -63,7 +63,7 @@
                   <a href="{{ .target }}" class="dropdown-menu-title">{{ .title }}</a>
                   {{ $indexPagePath := strings.TrimSuffix "/" (strings.TrimPrefix (printf "/%s/" site.Language.Lang) .target) }}
                   {{ $indexPage := site.GetPage $indexPagePath }}
-                  <p class="dropdown-menu-lead">{{ $indexPage.Params.summary }}</p>
+                  <div class="drodivdown-menu-lead">{{ safeHTML $indexPage.Params.summary }}</div>
                 </div>
             {{ end -}}
           {{- end -}}
