--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -1,30 +1,32 @@
 header#document-header
     nav
         @include media-breakpoint-up(desktop)
-            .container
-                align-items: baseline
             + nav 
                 border-bottom: 1px solid $header-color
                 padding-top: 0
-        &.websites-navigation
-            @include meta
-            padding-bottom: 0
-            ul
-                @include list-reset
-            .container > ul
-                display: flex
-                justify-content: flex-end
-                margin-left: auto
+                > .container
+                    align-items: flex-end
+                    span,
+                    a
+                        padding: 0
+        .menu
+            .upper-navigation.nav-level-1
+                margin-top: -($spacing-1)
+                gap: 0
+                justify-content: flex-start
+                @include media-breakpoint-up(desktop)
+                    justify-content: flex-end
+                    margin-bottom: 0
                 > li
-                    > a,
-                    &.header-i18n span
+                    > *
+                        @include meta
+                    > a
                         border-radius: pxToRem(20)
                         padding: space() $spacing-2
                         text-decoration: none
                         @include media-breakpoint-up(desktop)
-                            padding: space() space(4)
+                            padding: pxToRem(6) space(4)
                             border-radius: pxToRem(30)
-                    > a
                         &:not(.external-site)
                             background: $header-color
                             color: $header-background
@@ -34,48 +36,47 @@ header#document-header
                             &::after
                                 display: none
                     &:first-of-type
+                        a
+                            padding-left: space(4)
                         > a.external-site
                             border-bottom-right-radius: 0
                             border-top-right-radius: 0
                             margin-right: -$spacing-2
                             padding-right: space(7)
                         > a:not(.external-site)
-                            margin-left: -$spacing-2
+                            @include media-breakpoint-up(desktop)
+                                margin-left: -$spacing-2
                     &:nth-child(2)
                         > a.external-site
                             border-bottom-left-radius: 0
                             border-top-left-radius: 0
                             margin-left: -$spacing-2
                             padding-left: space(6)
-                    &.header-i18n
-                        margin-left: $spacing-2
-                        position: relative
-                        span
-                            @include icon(arrow-down-s-line, after)
-                                display: inline-block
-                                margin-left: space()
-                                margin-right: -(space())
-                                transition: transform 0.15s
-                            border: 1px solid $header-color
-                            cursor: pointer
-                            text-transform: uppercase
-                            &[aria-expanded="true"]::after
-                                transform: rotate(180deg)
-                        .dropdown-menu
-                            background: $header-color
-                            border-radius: space(2)
-                            box-shadow: 0px 4px 4px 0px #00000040
-                            margin-top: $spacing-2
-                            padding: $spacing-1 $spacing-2
-                            position: absolute
-                            right: 0
-                            a
-                                color: $header-background
+                    @include media-breakpoint-down(desktop)
+                        &.nav-search
+                            margin-left: auto
+                // Search icon
+                .pagefind-ui__toggle
+                    &::after
+                        line-height: 1
+                        transition: background-color .3s ease, border-color .3s ease
+                    @include media-breakpoint-up(desktop)
+                        display: flex
+                        justify-content: flex-end 
+                        height: pxToRem(44)
+                        padding: 0
+                        width: pxToRem(44)
+                        &::after
+                            border: 1px solid var(--color-text)
+                            border-radius: 100%
+                            padding: $spacing-1
+                        &:hover::after
+                            background-color: rgba($header-color, 0.2)
+                            border-color: transparent
         @include media-breakpoint-up(desktop)
             .menu
-                min-width: columns(6)
                 .nav-level-1
-                    justify-content: space-between
+                    gap: $spacing-5
                     li
                         span,
                         a
@@ -88,7 +89,7 @@ header#document-header
                 .dropdown-menu-title
                         @include h3
                         @include link($header-color)
-                        text-decoration-color: $header-color
+                        text-decoration-color: rgba($header-color, .5)
                         text-underline-offset: pxToRem(10)
                         margin-bottom: $spacing-3
                 .dropdown-menu-lead
@@ -97,7 +98,7 @@ header#document-header
                         line-height: $lead-hero-line-height
                 .dropdown-heading
                     margin-right: offset(1)
-                    width: columns(5)
+                    width: columns(7)
                 .nav-level-2
                     padding-top: $spacing-4
-                    width: columns(6)
+                    width: columns(4)
