--- a/assets/sass/cids-theme/theme.sass
+++ b/assets/sass/cids-theme/theme.sass
@@ -2,5 +2,7 @@
 @import "_configuration"
 @import "_fonts"
 @import "_theme/hugo-osuny"
-@import "styles/layout"
+@import "styles/footer"
 @import "styles/header"
+@import "styles/hero"
+@import "styles/layout"
