summary for full width

--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -10,7 +10,7 @@ header#document-header
                     a
                         padding: 0
         .menu
-            .upper-navigation.nav-level-1
+            .upper-menu.nav-level-1
                 margin-top: -($spacing-1)
                 gap: 0
                 justify-content: flex-start
