--- a/layouts/partials/commons/menu.html
+++ b/layouts/partials/commons/menu.html
@@ -41,13 +41,13 @@
       {{- $has_dropdown = true -}}
       {{- $attr = printf "id=\"dropdown-%s\" role=\"button\" aria-expanded=\"false\" tabindex=\"0\"" $slug -}}
     {{- end -}}
-    {{- if and (ne $kind "top-menu") (hasPrefix .target "http") (eq .kind "url") -}}
+    {{- if and (ne $kind "upper-menu") (hasPrefix .target "http") (eq .kind "url") -}}
       {{ if eq $ignore_externals false }}
         {{- $attr = " target=\"_blank\" rel=\"noreferrer\"" -}}
       {{ end }}
       {{- $attr_title = printf "title=\"%s - %s\"" .title $extern_link -}}
     {{- end -}}
-    {{- if and (eq $kind "top-menu") (hasPrefix .target "http") (eq .kind "url") -}}
+    {{- if and (eq $kind "upper-menu") (hasPrefix .target "http") (eq .kind "url") -}}
       {{- $link_class =  printf "%s %s" $link_class "external-site" -}}
     {{- end -}}
     {{- if or (ne $stop 1) (and (eq $stop 1) (ne .kind "blank")) -}}
@@ -89,7 +89,7 @@
     </li>
     {{- end -}}
   {{ end -}}
-  {{ if and (site.Params.search.active) (or (eq $kind "primary") (eq $kind "top-menu")) (eq site.Params.search.position $kind) }}
+  {{ if and (site.Params.search.active) (or (eq $kind "primary") (eq $kind "upper-menu")) (eq site.Params.search.position $kind) }}
     <li class="nav-search">
       {{ partial "header/search.html" (dict
           "position" $kind
