footer text underline

--- a/assets/sass/cids-theme/styles/footer.sass
+++ b/assets/sass/cids-theme/styles/footer.sass
@@ -52,7 +52,7 @@ footer#document-footer
                 max-width: columns(2)
                 + img
                         margin-left: $spacing-5
-    .footer-socials,
+    .footer-social,
     .footer-legals
         a
             text-decoration-color: $color-text
