homepage and large pages layout

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -6,6 +6,7 @@ $color-background-alt: #F3F4EB !default
 $color-border: rgba(0, 0, 0, 0.30) !default
 $color-selection: $color-background !default
 $color-selection-background: rgba($color-text, .7) !default
+$color-electric-blue: #0258FF
 
 // Grid System 
 $grid-gutter: pxToRem(24)
@@ -23,6 +24,10 @@ $h1-font-family: $font-serif
 $h1-size-desktop: pxToRem(84)
 $h1-line-height: 100%
 $h1-weight: normal
+
+// h2
+$h2-size: pxToRem(32)
+$h2-size-desktop: pxToRem(46)
 
 // h3
 $h3-font-family: $font-serif
@@ -73,12 +78,11 @@ $icons-site: ()
 $icons-site: map-merge($icons-site, ("external": "\e900"))
 
 // Buttons
-
-$btn-color: white
-$btn-hover-color: $btn-color
-$btn-background: #0258FF
-$btn-hover-background: $color-text
-$btn-border: none
+// $btn-color: white
+// $btn-hover-color: $btn-color
+// $btn-background: #0258FF
+// $btn-hover-background: $color-text
+// $btn-border: none
 
 // Blocks
 // without sidebar 
