--- a/assets/sass/cids-theme/styles/footer.sass
+++ b/assets/sass/cids-theme/styles/footer.sass
@@ -27,7 +27,9 @@ footer#document-footer
         .nav-social
             margin-top: $spacing-4
             a
-                @extend .btn
+                @extend .button-accent
+                --btn-background: #{$color-electric-blue}
+                --btn-hover-background: #{alphaColor($color-electric-blue, 0.85)}
         .footer-social.site-links
             li
                 justify-content: flex-start
