--- a/assets/sass/cids-theme/theme.sass
+++ b/assets/sass/cids-theme/theme.sass
@@ -2,7 +2,9 @@
 @import "_configuration"
 @import "_fonts"
 @import "_theme/hugo-osuny"
+@import "styles/blocks"
 @import "styles/footer"
 @import "styles/header"
 @import "styles/hero"
+@import "styles/home"
 @import "styles/layout"
