blockquote and typo

--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -16,9 +16,11 @@ $grid-margin: pxToRem(42)
 
 $font-serif: "RecklessNeue"
 $font-sans-serif: "Rand"
-$body-font-family: $font-sans-serif
 $heading-font-family: $font-sans-serif
 
+// Body
+$body-font-family: $font-sans-serif
+$body-size-desktop: pxToRem(20)
 // h1
 $h1-font-family: $font-serif
 $h1-size-desktop: pxToRem(84)
@@ -34,6 +36,13 @@ $h3-font-family: $font-serif
 $h3-size-desktop: pxToRem(32)
 $h3-line-height-desktop: pxToRem(44.8)
 
+// h5 or Section
+$h5-font-family: $font-serif
+$h5-size-desktop: pxToRem(32)
+$h5-line-height-desktop: pxToRem(38.4)
+$h5-weight: bold
+$h5-text-transform: normal
+
 // Lead
 $lead-font-family: $font-serif
 $lead-size-desktop: pxToRem(62)
@@ -43,6 +52,11 @@ $lead-weight: normal
 // signature
 $signature-size-desktop: pxToRem(20)
 $signature-line-height-desktop: 100%
+
+// Quotes
+$quote-font-family: $font-serif !default
+$quote-size-desktop-short: pxToRem(62) !default
+$quote-style: normal !default
 
 // Header
 $header-dropdown-full: true
