--- a/assets/sass/cids-theme/styles/home.sass
+++ b/assets/sass/cids-theme/styles/home.sass
@@ -1,4 +1,7 @@
 .page__home
+    .block-class-centered-title
+        + .block-testimonials
+            margin-top: space(25)
     .block-class-centered-title,
     .block-chapter
         @include media-breakpoint-up(desktop)
@@ -25,3 +28,18 @@
                 @include h2
                 font-size: $h2-size
                 font-family: $font-serif
+    .block-posts,
+    .block-agenda
+        @include media-breakpoint-up(desktop)
+            .top
+                margin-bottom: space(25)
+                .block-title
+                    @include h2
+                    a::after
+                        display: none
+            .post,
+            .event
+                &-title,
+                &-subtitle
+                    @include h2
+                    font-family: $font-serif
