--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -18,3 +18,6 @@
             @include media-breakpoint-up(desktop)
                 margin: auto
                 width: columns(9)
+    @include in-page-with-sidebar
+        .lead
+            text-align: center
