--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -34,11 +34,12 @@ body:not(.page__home)
                 text-align: center
                 width: columns(8)
 
-        // ending pages
+        // ending blocks
         .block:last-child
             &.block-pages,
             &.block-agenda
                 background-color: $color-background-alt
+                margin-bottom: 0
                 .block-content
                     padding-bottom: var(--grid-gutter)
                     padding-top: var(--grid-gutter)
