--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -9,7 +9,9 @@
         figure
             margin-top: $spacing-5
             @include media-breakpoint-up(desktop)
-                width: columns(8)
+                width: 100%
+                .page__home &
+                    width: columns(8)
 
 .block-summary
     @include in-page-without-sidebar
@@ -18,6 +20,12 @@
             @include media-breakpoint-up(desktop)
                 margin: auto
                 width: columns(9)
+
+.toc-container
     @include in-page-with-sidebar
-        .lead
-            text-align: center
+        width: columnns(3)
+    @include media-breakpoint-up(desktop)
+        + .block-summary 
+            padding-bottom: $spacing-6
+            .lead
+                padding-left: offset(2)
